<resources>
    <string name="app_name">NotesCleanArchitecture</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_detail_note">Detail Note</string>
    <string name="hint_note_title">title</string>
    <string name="hint_note_content">content</string>
    <string name="title_deadline">Deadline: %s</string>
    <string name="title_last_update">Last update: %s</string>
    <string name="title_memory_notes">Memory Notes</string>
    <string name="title_search_note">Search note</string>
    <string name="msg_no_notes_found">No notes found</string>
    <string name="deadline_tag_all_type">All type</string>
    <string name="deadline_tag_today_type">Today</string>
    <string name="deadline_tag_upcoming_type">Upcoming</string>
    <string name="deadline_tag_overdue_type">Overdue</string>

    <string name="title_deadline_tag">Deadline tag</string>
    <string name="title_status">Status</string>
    <string name="status_all_type">All type</string>
    <string name="status_todo_type">Todo</string>
    <string name="status_done_type">Done</string>

    <string name="title_apply">Apply</string>
    <string name="title_cancel">Cancel</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="apply_button">Apply</string>

    <string name="title_delete_note">Delete Note?</string>
    <string name="msg_delete_note">Do you want to delete this note?</string>
    <string name="title_yes">Yes</string>
    <string name="title_no">No</string>
    <string name="title_add_note_error">Add note error!</string>
    <string name="msg_add_note_error">Please fill title, content and choose deadline for this note!</string>

</resources>