<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp">

    <TextView
        android:id="@+id/tvDeadlineTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_deadline_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/tvTypeDeadLineTag"
        style="@style/Widget.Material3.Chip.Assist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/deadline_tag_all_type"
        app:chipMinHeight="45dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDeadlineTag" />


    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTypeDeadLineTag" />

    <com.google.android.material.chip.Chip
        android:id="@+id/tvTypeStatus"
        style="@style/Widget.Material3.Chip.Assist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/status_all_type"
        app:chipMinHeight="45dp"
        app:layout_constraintTop_toBottomOf="@+id/tvStatus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cancel_button"
        android:textColor="?colorControlNormal"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btnApply"
        app:layout_constraintTop_toBottomOf="@id/tvTypeStatus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnApply"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/apply_button"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTypeStatus" />
</androidx.constraintlayout.widget.ConstraintLayout>